--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "typescript": "^4.5.5"
     },
     "dependencies": {
+        "moment": "^2.29.1",
         "ziggy-js": "^1.4.3"
     }
 }
