--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@inertiajs/inertia-react": "^0.8.0",
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/line-clamp": "^0.3.1",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "@types/ziggy-js": "^1.3.1",
