--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/line-clamp": "^0.3.1",
+        "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "@types/ziggy-js": "^1.3.1",
@@ -33,6 +34,8 @@
         "typescript": "^4.5.5"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+        "@ckeditor/ckeditor5-react": "^4.0.0",
         "moment": "^2.29.1",
         "ziggy-js": "^1.4.3"
     }
