--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "commit": "cz"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.16.7",
@@ -23,6 +24,8 @@
         "@types/ziggy-js": "^1.3.1",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
+        "commitizen": "^4.2.5",
+        "cz-conventional-changelog": "3.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
@@ -38,5 +41,10 @@
         "@ckeditor/ckeditor5-react": "^4.0.0",
         "moment": "^2.29.1",
         "ziggy-js": "^1.4.3"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
