--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "@types/ziggy-js": "^1.3.1",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.11",
         "axios": "^0.25",
         "commitizen": "^4.2.5",
         "cz-conventional-changelog": "3.3.0",
+        "flowbite": "^1.5.3",
+        "flowbite-react": "^0.1.11",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
+        "postcss": "^8.4.16",
         "postcss-import": "^14.0.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "tailwindcss": "^3.0.18",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5"
