--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "postcss-import": "^14.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
         "tailwindcss": "^3.0.18",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5"
