--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "overtrue/laravel-favorite": "^5.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
